[project]
name = "totoro"
version = "v1.2.1"
description = "Totoro, your dependable devops buddy"
readme = "README.md"
requires-python = ">=3.11.9"
authors = [
    { name = 'Kim Choy', email = 'kim@smardt.com' }
]
dependencies = [
    "typer>=0.15.1",
    "pyyaml>=6.0.2",
    "fabric>=3.2.2",
    "invoke>=2.2.0",
    "click>=8.1.8",
    "boto3>=1.29.3",
    "rich>=14.0.0",
    "logfire>=4.14.2",
]

[project.scripts]
totoro = "totoro.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
